// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependenciesTableRow component when a dependency with no vulnerabilities is loaded matches the snapshot 1`] = `
<div
  class="gl-responsive-table-row flex-md-column align-items-md-stretch px-2"
>
  <div
    class="d-md-flex align-items-baseline"
  >
    <div
      class="table-section section-20 section-wrap pr-md-3"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        Status
      </div>
       
      <div
        class="table-mobile-content"
      >
        <span
          class="text-success-500 text-1"
        >
          <icon-stub
            class="align-middle mr-1"
            name="check-circle"
            size="16"
          />
          Safe
        
        </span>
      </div>
    </div>
     
    <div
      class="table-section section-20 section-wrap pr-md-3"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        
        Component
      
      </div>
       
      <div
        class="table-mobile-content"
      >
        left-pad
      </div>
    </div>
     
    <div
      class="table-section section-10 pr-md-3"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        Version
      </div>
       
      <div
        class="table-mobile-content"
      >
        0.0.3
      </div>
    </div>
     
    <div
      class="table-section section-20 section-wrap pr-md-3"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        Packager
      </div>
       
      <div
        class="table-mobile-content"
      >
        JavaScript (yarn)
      </div>
    </div>
     
    <div
      class="table-section section-15 section-wrap pr-md-3"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        Location
      </div>
       
      <div
        class="table-mobile-content"
      >
        <a
          href="/a-group/a-project/blob/da39a3ee5e6b4b0d3255bfef95601890afd80709/yarn.lock"
        >
          yarn.lock
        </a>
      </div>
    </div>
     
    <div
      class="table-section section-15 section-wrap"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        License
      </div>
       
      <div
        class="table-mobile-content"
      >
        <dependency-license-links-stub
          licenses=""
          title="left-pad"
        />
      </div>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`DependenciesTableRow component when a dependency with vulnerabilities is loaded matches the snapshot 1`] = `
<div
  class="gl-responsive-table-row flex-md-column align-items-md-stretch px-2"
>
  <div
    class="d-md-flex align-items-baseline"
  >
    <div
      class="table-section section-20 section-wrap pr-md-3"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        Status
      </div>
       
      <div
        class="table-mobile-content"
      >
        <gl-button-stub
          class="bold text-warning-700 text-1 text-decoration-none js-vulnerabilities-toggle"
          variant="link"
        >
          <icon-stub
            class="align-top text-secondary-700 d-none d-md-inline"
            name="arrow-down"
            size="16"
          />
          
          7 vulnerabilities
        
        </gl-button-stub>
      </div>
    </div>
     
    <div
      class="table-section section-20 section-wrap pr-md-3"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        
        Component
      
      </div>
       
      <div
        class="table-mobile-content"
      >
        left-pad
      </div>
    </div>
     
    <div
      class="table-section section-10 pr-md-3"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        Version
      </div>
       
      <div
        class="table-mobile-content"
      >
        0.0.3
      </div>
    </div>
     
    <div
      class="table-section section-20 section-wrap pr-md-3"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        Packager
      </div>
       
      <div
        class="table-mobile-content"
      >
        JavaScript (yarn)
      </div>
    </div>
     
    <div
      class="table-section section-15 section-wrap pr-md-3"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        Location
      </div>
       
      <div
        class="table-mobile-content"
      >
        <a
          href="/a-group/a-project/blob/da39a3ee5e6b4b0d3255bfef95601890afd80709/yarn.lock"
        >
          yarn.lock
        </a>
      </div>
    </div>
     
    <div
      class="table-section section-15 section-wrap"
    >
      <div
        class="table-mobile-header"
        role="rowheader"
      >
        License
      </div>
       
      <div
        class="table-mobile-content"
      >
        <dependency-license-links-stub
          licenses=""
          title="left-pad"
        />
      </div>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`DependenciesTableRow component when loading matches the snapshot 1`] = `
<div
  class="gl-responsive-table-row flex-md-column align-items-md-stretch px-2"
>
  <gl-skeleton-loading-stub
    class="d-flex flex-column justify-content-center h-auto"
    lines="1"
  />
   
  <!---->
</div>
`;

exports[`DependenciesTableRow component when passed no props matches the snapshot 1`] = `
<div
  class="gl-responsive-table-row flex-md-column align-items-md-stretch px-2"
>
  <gl-skeleton-loading-stub
    class="d-flex flex-column justify-content-center h-auto"
    lines="1"
  />
   
  <!---->
</div>
`;
